[metadata]
name = Flask-mdform
version = 0.1.dev0
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
license = BSD
description = Parse Markdown form and generate serializable FlaskForm
long_description = file: README.rst
keywords = markdown, form, flask, flask-wtf
url = https://github.com/hgrecco/flask-mdform
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Text Processing :: Markup :: HTML
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
py_modules= flask_mdform
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
    arrow
    setuptools
    mdform>=0.3
    Flask-WTF
    Flask-Uploads
    wtforms_components
    email_validator

setup_requires =
    setuptools
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov

[check-manifest]
ignore =
    .travis.yml

[bdist_wheel]
universal = 1

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build

[tool:pytest]
addopts = --pyargs

[isort]
default_section=THIRDPARTY
known_first_party=mdform
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
